[package]
name = "tokio-dtrace"
version = "0.1.0"
edition = "2024"
description = "DTrace probes for Tokio"
readme = "README.md"
repository = "https://github.com/oxidecomputer/tokio-dtrace"
license = "MIT OR Apache-2.0"

[dependencies]
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["rt"] }
usdt = "0.5.0"

[dev-dependencies.tokio]
version = "1.45.1"
features = ["rt", "rt-multi-thread", "time", "signal", "macros"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }
